[package]
name = "stblib"
version = "0.3.3"
edition = "2021"
authors = ["Juliandev02", "Paddyk45", "matteodev8"]
description = "stblib is a simple library used mostly by Strawberry Foundation's Projects"
license = "AGPL-3.0-only"
repository = "https://github.com/Strawberry-Foundations/stblib-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.29"
rustyline = "13.0.0"
chrono = "0.4.31"
regex = "1.10.2"
ureq = "2.9.1"
